--- a/app/src/main/res/menu/timetable_activity_main_drawer.xml
+++ b/app/src/main/res/menu/timetable_activity_main_drawer.xml
@@ -35,4 +35,17 @@
             android:title="@string/action_open_main_app" />
     </group>
 
+    <group
+        android:id="@+id/menu_backup"
+        android:checkableBehavior="none">
+        <item
+            android:id="@+id/timetable_backup"
+            android:icon="@drawable/ic_backup_black_24dp"
+            android:title="@string/menu_backup" />
+        <item
+            android:id="@+id/timetable_import"
+            android:icon="@drawable/ic_import_export_black_24dp"
+            android:title="@string/menu_import_backup" />
+    </group>
+
 </menu>
