--- a/app/src/main/res/layout/timetable_app_bar_main.xml
+++ b/app/src/main/res/layout/timetable_app_bar_main.xml
@@ -20,6 +20,21 @@
             android:background="?attr/colorPrimary"
             app:popupTheme="?attr/popupMenuStyle" />
 
+        <RelativeLayout
+            android:id="@+id/main_spinner_relative"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content">
+
+            <Spinner
+                android:id="@+id/main_profile_spinner"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:enabled="false"
+                android:popupBackground="?android:attr/windowBackground"
+                android:visibility="gone"
+                app:popupTheme="?attr/popupMenuStyle" />
+        </RelativeLayout>
+
 
         <com.google.android.material.tabs.TabLayout
             android:id="@+id/tabLayout"
