--- a/app/src/main/res/xml/timetable_settings.xml
+++ b/app/src/main/res/xml/timetable_settings.xml
@@ -51,7 +51,17 @@
         android:title="@string/set_courses_title" />
 
     <Preference
+        android:icon="@drawable/ic_backup_black_24dp"
+        android:key="timetable_backup"
+        android:title="@string/menu_backup" />
+
+    <Preference
+        android:icon="@drawable/ic_import_export_black_24dp"
+        android:key="timetable_restore"
+        android:title="@string/menu_import_backup" />
+
+    <Preference
         android:icon="@drawable/ic_open_in_browser_white_24dp"
         android:key="allprefs"
-        android:title="Alle Einstellungen öffnen" />
+        android:title="@string/open_all_settings" />
 </PreferenceScreen>
