--- a/app/src/main/res/values/integer.xml
+++ b/app/src/main/res/values/integer.xml
@@ -41,4 +41,12 @@
     <integer name="substitution_all_hour_long">3</integer>
     <integer name="substitution_all_hour_summary">2</integer>
 
+
+    <!-- Notification -->
+    <integer name="notification_bitmap_size">256</integer>
+    <integer name="notification_max_text_size">230</integer>
+    <integer name="notification_min_text_size">80</integer>
+    <integer name="notification_text_size_substitution_factor">30</integer>
+    <integer name="notification_text_size_timetable_factor">30</integer>
+
 </resources>
