changed colors in widget

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -69,10 +69,10 @@
     </string-array>
 
     <string-array name="shortcuts_array_values_default">
-        <item>website</item>
         <item>mebis</item>
         <item>mensa</item>
         <item>grades_management</item>
+        <item>roomplan_search</item>
     </string-array>
 
     <string-array name="shortcuts_array_values_default_parent_mode">
