--- a/app/src/main/res/menu/timetable_main.xml
+++ b/app/src/main/res/menu/timetable_main.xml
@@ -2,6 +2,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
+        android:id="@+id/menu_main_app"
+        android:icon="@drawable/ic_open_in_browser_white_24dp"
+        app:iconTint="@color/white"
+        android:orderInCategory="100"
+        android:title="@string/action_open_main_app"
+        app:showAsAction="ifRoom" />
+    <item
         android:id="@+id/action_substitutionIntegration"
         android:icon="@drawable/ic_assignment_late"
         android:orderInCategory="100"
@@ -18,9 +25,9 @@
         android:title="@string/menu_restore"
         app:showAsAction="never" />
     <item
-        android:id="@+id/action_timetable_delete_all"
+        android:id="@+id/action_timetable_remove_all"
         android:orderInCategory="100"
-        android:title="@string/integrate_substitution_in_timetable_on"
+        android:title="@string/remove_all_subjects"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_settings"
