--- a/app/src/main/res/layout/timetable_dialog_add_subject.xml
+++ b/app/src/main/res/layout/timetable_dialog_add_subject.xml
@@ -101,7 +101,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center"
             android:text="@string/select_start_time"
             android:textAllCaps="true"
@@ -130,7 +130,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackground"
             android:gravity="center"
             android:text="@string/select_end_time"
             android:textAllCaps="true"
