--- a/app/src/main/res/layout/timetable_dialog_add_homework.xml
+++ b/app/src/main/res/layout/timetable_dialog_add_homework.xml
@@ -69,7 +69,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight=".7"
-            android:background="?android:attr/selectableItemBackground"
+            android:background="?attr/selectableItemBackground"
             android:text="@string/choose_date"
             android:textAlignment="center"
             android:textAllCaps="true"
