--- a/app/src/main/res/layout/list_room_search_entry.xml
+++ b/app/src/main/res/layout/list_room_search_entry.xml
@@ -19,15 +19,16 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
     android:orientation="horizontal">
 
     <TextView
         android:id="@+id/room_search_room"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_weight="5"
         android:gravity="center|start"
+        android:text="Mensa"
         android:textColor="?android:attr/textColorPrimary"
         android:textSize="24sp"
         android:textStyle="bold" />
