--- a/app/src/main/res/layout/card_author.xml
+++ b/app/src/main/res/layout/card_author.xml
@@ -87,7 +87,7 @@
             android:layout_height="wrap_content"
 
             android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
+            android:foreground="?android:attr/selectableItemBackground"
             android:focusable="true"
             android:minHeight="@dimen/about_listitem_height"
             android:gravity="center_vertical"
@@ -121,7 +121,7 @@
 
             android:minHeight="@dimen/about_listitem_height"
             android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
+            android:foreground="?android:attr/selectableItemBackground"
             android:focusable="true"
             android:gravity="center_vertical"
 
@@ -155,7 +155,7 @@
             android:minHeight="@dimen/about_listitem_height"
             android:focusable="true"
             android:clickable="true"
-            android:foreground="?attr/selectableItemBackground"
+            android:foreground="?android:attr/selectableItemBackground"
             android:gravity="center_vertical"
 
             android:orientation="horizontal"
