--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -73,7 +73,7 @@
             android:background="@null"
             android:clickable="true"
             android:focusable="true"
-            android:foreground="?attr/selectableItemBackground"
+            android:foreground="?android:attr/selectableItemBackground"
             android:padding="@dimen/nav_header_settings_padding"
             app:tint="?android:attr/textColorPrimary"
             app:srcCompat="@drawable/ic_settings_black_24dp" />
