--- a/app/src/main/res/xml/preferences_notification.xml
+++ b/app/src/main/res/xml/preferences_notification.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -27,21 +26,27 @@
     <SwitchPreference
         android:defaultValue="true"
         android:key="alwaysNotification"
+        android:summary="@string/set_desc_alwaysNotification"
         android:title="@string/set_notification_showAlways"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_alwaysNotification" />
+        app:iconSpaceReserved="false" />
+    <SwitchPreference
+        android:defaultValue="true"
+        android:key="RSS_notif"
+        android:summary="@string/rss_notification_channel_description"
+        android:title="@string/set_rss_notification"
+        app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="false"
         android:key="two_notifs"
+        android:summary="@string/set_desc_two_notifs"
         android:title="@string/set_two_notifications"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_two_notifs" />
+        app:iconSpaceReserved="false" />
     <SwitchPreference
         android:defaultValue="false"
         android:key="main_notif_for_all"
+        android:summary="@string/set_main_notif_for_all_desc"
         android:title="@string/set_main_notif_for_all_title"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_main_notif_for_all_desc" />
+        app:iconSpaceReserved="false" />
     <CheckBoxPreference
         android:defaultValue="true"
         android:key="showSummaryNotification"
@@ -50,12 +55,12 @@
     <SwitchPreference
         android:defaultValue="false"
         android:key="summary_notif_as_usual"
+        android:summary="@string/set_show_summary_usual_desc"
         android:title="@string/set_show_summary_usual_title"
-        app:iconSpaceReserved="true"
-        android:summary="@string/set_show_summary_usual_desc" />
+        app:iconSpaceReserved="true" />
     <Preference
         android:key="alarm"
+        android:summary="@string/set_desc_alarm"
         android:title="@string/set_notification_alarm"
-        app:iconSpaceReserved="false"
-        android:summary="@string/set_desc_alarm" />
+        app:iconSpaceReserved="false" />
 </PreferenceScreen>
