--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -51,6 +51,8 @@
         <item>@string/shortcut_claxss</item>
         <item>@string/shortcut_forms</item>
         <item>@string/shortcut_newspaper</item>
+        <item>@string/add_homework</item>
+        <item>@string/notes_activity_title</item>
     </string-array>
 
     <string-array name="shortcuts_array_values">
@@ -66,6 +68,8 @@
         <item>claxss</item>
         <item>forms</item>
         <item>newspaper</item>
+        <item>addHomework</item>
+        <item>openNotes</item>
     </string-array>
 
     <string-array name="shortcuts_array_values_default">
