--- a/app/src/main/res/menu/timetable_activity_main_drawer.xml
+++ b/app/src/main/res/menu/timetable_activity_main_drawer.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -25,10 +24,6 @@
         android:id="@+id/menu_mid"
         android:checkableBehavior="none">
         <item
-            android:id="@+id/summary"
-            android:icon="@drawable/ic_assignment_white_24dp"
-            android:title="@string/summary_activity_title" />
-        <item
             android:id="@+id/exams"
             android:icon="@drawable/ic_school_black_24dp"
             android:title="@string/exams_activity_title" />
@@ -41,6 +36,15 @@
             android:id="@+id/notes"
             android:icon="@drawable/ic_event_note_black_24dp"
             android:title="@string/notes_activity_title" />
+    </group>
+
+    <group
+        android:id="@+id/menu_mid_2"
+        android:checkableBehavior="none">
+        <item
+            android:id="@+id/summary"
+            android:icon="@drawable/ic_assignment_white_24dp"
+            android:title="@string/summary_activity_title" />
     </group>
 
     <group
