--- a/app/src/main/res/layout/timetable_item_day_appwidget.xml
+++ b/app/src/main/res/layout/timetable_item_day_appwidget.xml
@@ -17,14 +17,22 @@
   ~     along with GymWenApp.  If not, see <https://www.gnu.org/licenses/>.
   -->
 
-<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <Preference
-        android:key="start_time"
-        android:title="@string/start_of_school"
-        app:iconSpaceReserved="false" />
-    <Preference
-        android:key="set_period_length"
-        android:title="@string/length_of_period"
-        app:iconSpaceReserved="false" />
-</PreferenceScreen>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/widget_linear"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:paddingBottom="4dp"
+    android:paddingEnd="12dp"
+    android:paddingStart="12dp"
+    android:paddingTop="4dp">
+
+    <TextView
+        android:id="@+id/widget_text"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:ellipsize="end"
+        android:maxLines="1"
+        android:textColor="@android:color/white" />
+
+</LinearLayout>
