--- a/app/src/main/res/layout/timetable_app_bar_main.xml
+++ b/app/src/main/res/layout/timetable_app_bar_main.xml
@@ -46,7 +46,7 @@
             android:gravity="center"
             android:text="Even week"
             android:textColor="?android:attr/textColorPrimary"
-            android:textSize="12dp" />
+            android:textSize="12sp" />
 
         <RelativeLayout
             android:id="@+id/main_spinner_relative"
