--- a/app/src/main/res/xml/timetable_settings.xml
+++ b/app/src/main/res/xml/timetable_settings.xml
@@ -46,6 +46,7 @@
     <SwitchPreferenceCompat
         android:defaultValue="false"
         android:key="do_not_disturb_turn_off"
+        android:summary="@string/do_not_disturb_turn_off_desc"
         android:title="@string/do_not_disturb_turn_off" />
 
     <SwitchPreferenceCompat
