--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -18,6 +18,12 @@
 
 <changelog>
     <release
+        version="1.2.2"
+        versioncode="122">
+        <change>Voreinstellungsliste im Stundenplan editierbar</change>
+        <change>Bugfixes</change>
+    </release>
+    <release
         version="1.2.1"
         versioncode="121">
         <change>Benachrichtigung über neue Artikel auf der Homepage</change>
