--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -20,7 +20,8 @@
     <release
         version="1.2.2"
         versioncode="122">
-        <change>Voreinstellungsliste im Stundenplan editierbar</change>
+        <change>Durchsuchbare Einstellungen</change>
+        <change>Vorschlägeliste im Stundenplan editierbar</change>
         <change>Bugfixes</change>
     </release>
     <release
