added setting keys

--- a/app/src/main/res/xml/preferences_substitutionplan.xml
+++ b/app/src/main/res/xml/preferences_substitutionplan.xml
@@ -63,6 +63,7 @@
     <Preference
         android:summary="@string/set_desc_credentials_fragment"
         android:title="@string/set_substitution_signin"
+        android:key="signin"
         app:fragment="com.asdoi.gymwen.ui.settingsFragments.SettingsFragmentSignIn"
         app:iconSpaceReserved="false" />
 </PreferenceScreen>
