--- a/app/src/main/res/xml/preferences_design.xml
+++ b/app/src/main/res/xml/preferences_design.xml
@@ -44,6 +44,7 @@
             android:summary="@string/set_desc_menu_items_fragment"
             android:title="@string/menu_items"
             app:fragment="com.asdoi.gymwen.ui.settingsFragments.SettingsFragmentHideMenuItems"
+            android:key="menuitems"
             app:iconSpaceReserved="false" />
     </PreferenceCategory>
     <PreferenceCategory
