--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -20,23 +19,13 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <item
-        android:id="@+id/action_switch_design"
-        android:icon="@drawable/ic_art"
-        android:title="@string/switch_design"
-        app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_settings"
-        android:title="@string/action_settings"
-        app:showAsAction="never" />
-    <item
         android:id="@+id/action_refresh"
         android:icon="@drawable/ic_refresh_white_24dp"
         android:title="@string/action_refresh"
         app:showAsAction="ifRoom" />
     <item
-        android:id="@+id/action_refresh2"
-        android:title="@string/action_refresh"
-        android:visible="false"
+        android:id="@+id/action_settings"
+        android:title="@string/action_settings"
         app:showAsAction="never" />
     <item
         android:id="@+id/action_update"
@@ -57,6 +46,9 @@
         android:title="@string/menu_impressum"
         android:visible="true"
         app:showAsAction="never" />
-
-
+    <item
+        android:id="@+id/action_switch_design"
+        android:icon="@drawable/ic_art"
+        android:title="@string/switch_design"
+        app:showAsAction="never" />
 </menu>
