--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -22,6 +22,7 @@
         versioncode="122">
         <change>Durchsuchbare Einstellungen</change>
         <change>Vorschlägeliste im Stundenplan editierbar</change>
+        <change>Manuelle Entsperrung hinzugefügt</change>
         <change>Kleinere Design-Änderungen</change>
         <change>Bugfixes</change>
     </release>
