--- a/app/src/main/res/xml/provider_paths.xml
+++ b/app/src/main/res/xml/provider_paths.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -18,10 +17,6 @@
   -->
 
 <paths>
-    <!--<external-path name="external_files" path="."/>-->
-    <external-path
-        name="files_root"
-        path="Android/data/YOUR_PACKAGE_NAME" />
     <external-path
         name="external_storage_root"
         path="." />
