--- a/app/src/main/res/xml/preferences_design.xml
+++ b/app/src/main/res/xml/preferences_design.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -20,7 +19,7 @@
 <PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto">
     <PreferenceCategory
-        android:title="Allgemein"
+        android:title="@string/set_general_category"
         app:iconSpaceReserved="false">
 
         <ListPreference
@@ -41,10 +40,10 @@
             android:title="@string/color_primary"
             app:iconSpaceReserved="false" />
         <Preference
+            android:key="menuitems"
             android:summary="@string/set_desc_menu_items_fragment"
             android:title="@string/menu_items"
             app:fragment="com.asdoi.gymwen.ui.settingsFragments.SettingsFragmentHideMenuItems"
-            android:key="menuitems"
             app:iconSpaceReserved="false" />
     </PreferenceCategory>
     <PreferenceCategory
