add samsung DeX support

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -23,6 +23,7 @@
         <change>Durchsuchbare Einstellungen</change>
         <change>Vorschlägeliste im Stundenplan editierbar</change>
         <change>Manuelle Entsperrung hinzugefügt</change>
+        <change>Samsung DeX Kompatibilität</change>
         <change>Kleinere Design-Änderungen</change>
         <change>Bugfixes</change>
     </release>
