integrate fixes from timetable project

--- a/app/src/main/res/layout/timetable_activity_note_info.xml
+++ b/app/src/main/res/layout/timetable_activity_note_info.xml
@@ -26,5 +26,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@null"
-        android:inputType="none" />
+        android:inputType="none"
+        android:padding="8dp" />
 </LinearLayout>
