--- a/app/src/main/res/layout/list_profiles_entry.xml
+++ b/app/src/main/res/layout/list_profiles_entry.xml
@@ -1,5 +1,4 @@
-<?xml version="1.0" encoding="utf-8"?>
-<!--
+<?xml version="1.0" encoding="utf-8"?><!--
   ~ Copyright (c) 2020 Felix Hollederer
   ~     This file is part of GymWenApp.
   ~
@@ -29,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:tint="?android:attr/textColorPrimary"
         app:srcCompat="@drawable/ic_delete_black_24dp" />
 
     <LinearLayout
@@ -63,12 +63,15 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:tint="?android:attr/textColorPrimary"
         app:srcCompat="@drawable/ic_star_border_black_24dp" />
+
     <ImageButton
         android:id="@+id/profilelist_edit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
+        android:tint="?android:attr/textColorPrimary"
         app:srcCompat="@drawable/ic_edit_black_24dp" />
 
 
