--- a/app/src/main/res/layout/timetable_app_bar_main.xml
+++ b/app/src/main/res/layout/timetable_app_bar_main.xml
@@ -45,7 +45,7 @@
             android:background="?attr/colorPrimary"
             android:gravity="center"
             android:text="Even week"
-            android:textColor="?android:attr/textColorPrimary"
+            android:textColor="@android:color/white"
             android:textSize="12sp" />
 
         <RelativeLayout
@@ -57,7 +57,6 @@
                 android:id="@+id/main_profile_spinner"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:enabled="false"
                 android:popupBackground="?android:attr/windowBackground"
                 android:visibility="gone"
                 app:popupTheme="?attr/popupMenuStyle" />
