update changelog and strings

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -21,6 +21,7 @@
         version="1.2.2"
         versioncode="122">
         <change>(Inoffizielle) Mebis App hinzugefügt</change>
+        <change>Corona Live-Ticker für den LK Roth hinzugefügt</change>
         <change>Durchsuchbare Einstellungen</change>
         <change>Vorschlägeliste im Stundenplan editierbar</change>
         <change>Manuelle Entsperrung hinzugefügt</change>
